aks-cluster/hauler/00-roles.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hauler-system
