aks-cluster/hauler/12-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hauler-fileserver
  namespace: hauler-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hauler-fileserver
  template:
    metadata:
      labels:
        app: hauler-fileserver
    spec:
      containers:
        - name: hauler-fileserver
          image: hauler/hauler:1.3.0
          args: ["store", "serve", "fileserver", "--port", "8080"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: hauler-data
              mountPath: /store
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
            failureThreshold: 0
      restartPolicy: Always
      serviceAccountName: hauler-service-account
      volumes:
        - name: hauler-data
          persistentVolumeClaim:
            claimName: hauler-data
---
apiVersion: v1
kind: Service
metadata:
  name: hauler-fileserver
  namespace: hauler-system
spec:
  selector:
    app: hauler-fileserver
  ports:
    - name: hauler-fileserver
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hauler-fileserver
  namespace: hauler-system
  annotations:
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: fileserver.ingress.host
    http:
      paths:
      - backend:
          service:
            name: hauler-fileserver
            port:
              number: 8080
        path: /
        pathType: Prefix
