aks-cluster/hauler/22-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hauler-registry
  namespace: hauler-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hauler-registry
  template:
    metadata:
      labels:
        app: hauler-registry
    spec:
      containers:
        - name: hauler-registry
          image: hauler/hauler:1.3.0
          args: ["store", "serve", "registry", "--port", "5000"]
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: hauler-data
              mountPath: /store
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 15
            failureThreshold: 0
      restartPolicy: Always
      serviceAccountName: hauler-service-account
      volumes:
        - name: hauler-data
          persistentVolumeClaim:
            claimName: hauler-data
---
apiVersion: v1
kind: Service
metadata:
  name: hauler-registry
  namespace: hauler-system
spec:
  selector:
    app: hauler-registry
  ports:
    - name: hauler-registry
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hauler-registry
  namespace: hauler-system
  annotations:
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: registry.ingress.host
    http:
      paths:
      - backend:
          service:
            name: hauler-registry
            port:
              number: 5000
        path: /
        pathType: Prefix
